[package]
name = "apkeep"
version = "1.0.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2021"
license = "MIT"
description = "A command-line tool for downloading APK files from various sources"
homepage = "https://github.com/EFForg/apkeep"
repository = "https://github.com/EFForg/apkeep"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream"] }
futures-util = { version = "0.3", features = ["io"] }
regex = "1.12"
clap = { version = "4", features = ["derive"] }
gpapi = "6"
tokio-dl-stream-to-disk = { version = "1", features = ["sha256sum"] }
tempfile = "3"
dirs = "6"
zip = "8"
cryptographic-message-syntax = "0.28"
ring = "0.17"
x509-certificate = "0.25"
simple-error = "0.3"
sha1 = "0.11"
sha2 = "0.11"
base64 = "0.22"
serde_json = "1"
hex = "0.4"
configparser = "3"
serde = { version = "1", features = ["derive"] }
indicatif = "0.18"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
